--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - SplitArray1",
+            "request": "launch",
+            "mainClass": "Teambition.Algor.SplitArray1",
+            "projectName": "leetcode_7d3c9599"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - SplitArray",
+            "request": "launch",
+            "mainClass": "Teambition.Algor.SplitArray",
+            "projectName": "leetcode_7d3c9599"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - SplitArray",
             "request": "launch",
             "mainClass": "Teambition.Algor.SplitArray",
