--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - IsMatch1",
+            "request": "launch",
+            "mainClass": "hard.backtracking.IsMatch1",
+            "projectName": "leetcode_7d3c9599"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - IsMatch",
+            "request": "launch",
+            "mainClass": "hard.backtracking.IsMatch",
+            "projectName": "leetcode_7d3c9599"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - IsMatch",
             "request": "launch",
             "mainClass": "hard.backtracking.IsMatch",
