--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,48 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - ContainsPattern",
+            "request": "launch",
+            "mainClass": "week204.ContainsPattern",
+            "projectName": "leetcode_6c82ef91"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - GetMaxLen",
+            "request": "launch",
+            "mainClass": "week204.GetMaxLen",
+            "projectName": "leetcode_6c82ef91"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Test",
+            "request": "launch",
+            "mainClass": "week204.Test",
+            "projectName": "leetcode_6c82ef91"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - MaxProfit",
+            "request": "launch",
+            "mainClass": "hard.DP.MaxProfit",
+            "projectName": "leetcode_6c82ef91"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - IsMatch3",
+            "request": "launch",
+            "mainClass": "hard.backtracking.IsMatch3",
+            "projectName": "leetcode_6c82ef91"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - IsMatch2",
+            "request": "launch",
+            "mainClass": "hard.backtracking.IsMatch2",
+            "projectName": "leetcode_6c82ef91"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - IsMatch1",
             "request": "launch",
             "mainClass": "hard.backtracking.IsMatch1",
